--- a/index.html
+++ b/index.html
@@ -115,7 +115,38 @@
           <div class="col-7">
             <h3 class="regular-font-size text-uppercase mb-3">El evento se celebra en</h3>
             <p class="mb-5">Un espacio singular: las entrañas del C.C. Área Central.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.5370369796315!2d-8.529798684879546!3d42.8826149099335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2efe4cc8f09e77%3A0x7c11289461f6f534!2s%C3%81rea%20Central!5e0!3m2!1ses!2ses!4v1575372507817!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe class="large"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.5370369796315!2d-8.529798684879546!3d42.8826149099335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2efe4cc8f09e77%3A0x7c11289461f6f534!2s%C3%81rea%20Central!5e0!3m2!1ses!2ses!4v1575372507817!5m2!1ses!2ses"
+                    width="800"
+                    height="600"
+                    frameborder="0"
+                    style="border:0;"
+                    allowfullscreen="">
+            </iframe>
+            <iframe class="big"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.5370369796315!2d-8.529798684879546!3d42.8826149099335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2efe4cc8f09e77%3A0x7c11289461f6f534!2s%C3%81rea%20Central!5e0!3m2!1ses!2ses!4v1575372507817!5m2!1ses!2ses"
+                    width="600"
+                    height="450"
+                    frameborder="0"
+                    style="border:0;"
+                    allowfullscreen="">
+            </iframe>
+            <iframe class="medium"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.5370369796315!2d-8.529798684879546!3d42.8826149099335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2efe4cc8f09e77%3A0x7c11289461f6f534!2s%C3%81rea%20Central!5e0!3m2!1ses!2ses!4v1575372507817!5m2!1ses!2ses"
+                    width="400"
+                    height="300"
+                    frameborder="0"
+                    style="border:0;"
+                    allowfullscreen="">
+            </iframe>
+            <iframe class="small"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.5370369796315!2d-8.529798684879546!3d42.8826149099335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2efe4cc8f09e77%3A0x7c11289461f6f534!2s%C3%81rea%20Central!5e0!3m2!1ses!2ses!4v1575372507817!5m2!1ses!2ses"
+                    width="300"
+                    height="225"
+                    frameborder="0"
+                    style="border:0;"
+                    allowfullscreen="">
+            </iframe>
           </div>
         </div>
       </div>
