Add missing link to eventbrite

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h1 class="mb-4">El evento<br/>sin power points</h1>
             <p class="mb-5">1 de Febrero de 2020 &bullet; Santiago de Compostela</p>
             <p class="regular-font-size">
-              <a href="#" class="btn btn-primary px-4 py-3 text-uppercase">Compra tu entrada</a>
+              <a href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663" class="btn btn-primary px-4 py-3 text-uppercase">Compra tu entrada</a>
             </p>
           </div>
         </div>
