--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-4">
-            <p class="text-center">
+          <div class="col-md-4">
+            <p class="text-center p-2">
                 <a href="https://areacentral.es/" target="_blank"><img src="images/logo_ac.png"></a>
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4 p-2">
             <p class="text-center">
                 <a href="https://www.bermorabogados.com/" target="_blank"><img src="images/logo_bermor.png"></a>
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4 p-2">
             <p class="text-center">
                 <a href="https://www.nolegaltech.com" target="_blank"><img src="images/logo_nlt.png"></a>
             </p>
