--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-4">
+          <div class="col-md-4">
                 <p class="text-center">
                    <a href="https://www.linkedin.com/in/b%C3%A1rbara-rom%C3%A1n-m%C3%A9ndez-3b1b80138/" target="_blank"><img src="images/barbara_roman.jpeg" class="rounded-circle organizer"></a>
                    <a href="https://www.linkedin.com/in/b%C3%A1rbara-rom%C3%A1n-m%C3%A9ndez-3b1b80138/" target="_blank">
@@ -202,7 +202,7 @@
                    </a>
                 </p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
                 <p class="text-center">
                    <a href="https://www.linkedin.com/in/duqueabogada/" target="_blank"><img src="images/raquel_duque.jpeg" class="rounded-circle organizer"></a>
                    <a href="https://www.linkedin.com/in/duqueabogada/" target="_blank">
@@ -210,7 +210,7 @@
                    </a>
                 </p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
                 <p class="text-center">
                    <a href="https://www.linkedin.com/in/ana-cristina-barrera-carballo-82b548181/" target="_blank"><img src="images/cristina_barrera.jpeg" class="rounded-circle organizer"></a>
                    <a href="https://www.linkedin.com/in/ana-cristina-barrera-carballo-82b548181/" target="_blank">
