Responsive event format

--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-1 col-lg-1">
+          <div class="col-1 col-sm-1 col-md-1 col-lg-1">
           </div>
-          <div class="col-md-1 col-lg-1">
+          <div class="col-2 col-sm-2 col-md-1 col-lg-1">
             <div class="text-right p-6 item">
                 <img src="images/hand-point-right-regular.svg"/>
             </div>
           </div>
-          <div class="col-md-10 col-lg-10">
+          <div class="col-9 col-sm-9 col-md-10 col-lg-10">
             <div class="text-left p-6 item mb-5">
                 <h2 class="text-uppercase">Principios</h2>
                 <ul>
@@ -252,14 +252,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-1 col-lg-1">
+          <div class="col-1 col-sm-1 col-md-1 col-lg-1">
           </div>
-          <div class="col-md-1 col-lg-1">
+          <div class="col-2 col-sm-2 col-md-1 col-lg-1">
             <div class="text-right p-6 item">
                 <img src="images/shoe-prints-solid.svg"/>
             </div>
           </div>
-          <div class="col-md-10 col-lg-10 mb-5">
+          <div class="col-9 col-sm-9 col-md-10 col-lg-10">
             <div class="text-left p-6 item">
                 <h2 class="text-uppercase">Ley de los dos pies</h2>
                 <blockquote class="ml-4">Si en algún momento sientes que no estás aprendiendo o contribuyendo en nada, usa tus pies.</blockquote>
