--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
           <div class="col-md-10 text-center" data-aos="fade">
               <h1 class="mb-4">El evento<br/>sin power points</h1>
             <p class="mb-5">1 de Febrero de 2020 &bullet; Santiago de Compostela</p>
-            <p class="regular-font-size">
-              <a href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663" class="btn btn-primary px-4 py-3 text-uppercase">Compra tu entrada</a>
+            <p>
+              <a
+                target="_blank"
+                href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663"
+                class="btn btn-primary px-4 py-3 text-uppercase big-font-size">
+                  Compra tu entrada
+              </a>
             </p>
           </div>
         </div>
@@ -91,7 +96,14 @@
             <p>Un Open Space es una desconferencia: no existe un programa de charlas predefinido, sino que los asistentes propondrán los temas a tratar <i>in situ</i>.</p>
             <p>Los temas seleccionados se colocan en un panel visible para todo el mundo. Habrá varios tracks en paralelo y la gente podrá asistir a las sesiones que le apetezca. Lee más acerca del formato <a class="smooth-scroll" href="#formato">aquí</a>.</p>
             <p class="mb-5">¿Eres nuevo en un Open Space? ¡No te preocupes! Habrá facilitadores que te ayudarán a sacar el máximo provecho. Lo único que necesitas son ganas de compartir, aprender e interactuar con otras personas.</p>
-            <p><a href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663" target="_blank" class="btn btn-primary px-4 py-2">Compra tu entrada ahora</a></p>
+            <p>
+              <a
+                target="_blank"
+                href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663"
+                class="btn btn-primary px-4 py-3 text-uppercase big-font-size">
+                  Compra tu entrada
+              </a>
+            </p>
           </div>
         </div>
       </div>
@@ -269,7 +281,14 @@
         <div class="row">
           <div class="mt-5 col-md-10 col-lg-10 mx-auto">
             <div class="text-center p-6 item">
-                <p><a href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663" target="_blank" class="btn btn-primary px-4 py-2">Compra tu entrada ahora</a></p>
+              <p>
+                <a
+                  target="_blank"
+                  href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663"
+                  class="btn btn-primary px-4 py-3 text-uppercase big-font-size">
+                    Compra tu entrada
+                </a>
+              </p>
             </div>
           </div>
         </div>
