--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div class="container">
         <div class="row mb-10">
           <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-            <h2 class="mt-5 text-uppercase">Patrocinan</h2>
+            <h2 class="text-uppercase">Patrocinan</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -202,7 +202,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-            <h2 class="mt-5 text-uppercase">Organizan</h2>
+            <h2 class="text-uppercase">Organizan</h2>
           </div>
         </div>
         <div class="row justify-content-center">
