Grayscale effect for organizer and sponsor images

--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
         <div class="row justify-content-center">
           <div class="col-md-4">
             <p class="text-center p-2">
-                <a href="https://areacentral.es/" target="_blank"><img src="images/logo_ac.png"></a>
+                <a href="https://areacentral.es/" target="_blank"><img src="images/logo_ac.png" class="sponsor"></a>
             </p>
           </div>
           <div class="col-md-4 p-2">
             <p class="text-center">
-                <a href="https://www.bermorabogados.com/" target="_blank"><img src="images/logo_bermor.png"></a>
+                <a href="https://www.bermorabogados.com/" target="_blank"><img src="images/logo_bermor.png" class="sponsor fade"></a>
             </p>
           </div>
           <div class="col-md-4 p-2">
             <p class="text-center">
-                <a href="https://www.nolegaltech.com" target="_blank"><img src="images/logo_nlt.png"></a>
+                <a href="https://www.nolegaltech.com" target="_blank"><img src="images/logo_nlt.png" class="sponsor"></a>
             </p>
           </div>
         </div>
