Responsive topic in the menu

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Legal Open Space</title>
+    <title>Legal Open Space - El ejercicio de la profesión</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -45,10 +45,11 @@
         <div class="site-navbar bg-light">
           <div class="py-1">
             <div class="row align-items-center">
-              <div class="col-6">
-                <h2 class="mb-0 site-logo"><a href="index.html">Legal Open Space</a></h2>
+              <div class="col-5">
+                <h2 class="col-12 col-sm-12 col-md-8 col-lg-12 mb-4 site-logo"><a href="index.html">Legal Open Space</a></h2>
               </div>
-              <div class="col-6">
+              <div class="col-7 text-right">
+                <h2 class="mb-4 site-logo"><a href="index.html">Sobre el ejercicio de la profesión</a></h2>
               </div>
             </div>
           </div>
