--- a/index.html
+++ b/index.html
@@ -94,9 +94,21 @@
           <div class="col-10 col-lg-7">
             <h3 class="regular-font-size text-uppercase mb-3">El evento empieza en</h3>
             <div id="date-countdown" class="mb-4"></div>
-            <p>Un Open Space es una desconferencia: no existe un programa de charlas predefinido, sino que los asistentes propondrán los temas a tratar <i>in situ</i>.</p>
-            <p>Los temas seleccionados se colocan en un panel visible para todo el mundo. Habrá varios tracks en paralelo y la gente podrá asistir a las sesiones que le apetezca. Lee más acerca del formato <a class="smooth-scroll" href="#formato">aquí</a>.</p>
-            <p class="mb-5">¿Eres nuevo en un Open Space? ¡No te preocupes! Habrá facilitadores que te ayudarán a sacar el máximo provecho. Lo único que necesitas son ganas de compartir, aprender e interactuar con otras personas.</p>
+            <p>
+                Un Open Space es una desconferencia:
+                no existe un programa de charlas predefinido, sino que los asistentes
+                propondrán los temas a tratar <i>in situ</i>.
+            </p>
+            <p>
+                Los temas seleccionados se colocan en un panel visible para todo el mundo.
+                Habrá varios tracks en paralelo y la gente podrá asistir a las sesiones que le apetezca.
+                Lee más acerca del formato <a class="smooth-scroll" href="#formato">aquí</a>.
+            </p>
+            <p class="mb-5">
+                ¿Eres nuevo en un Open Space? ¡No te preocupes!
+                Habrá facilitadores que te ayudarán a sacar el máximo provecho.
+                Lo único que necesitas son ganas de compartir, aprender e interactuar con otras personas.
+            </p>
             <p>
               <a
                 target="_blank"
