Include the topic in the description of the event

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                 Un Open Space es una desconferencia:
                 no existe un programa de charlas predefinido, sino que los asistentes
                 propondrán los temas a tratar <i>in situ</i>.
+                Cualquier tema propuesto es válido, siempre dentro de la propuesta global de
+                conversar acerca del ejercicio de la profesión.
             </p>
             <p>
                 Los temas seleccionados se colocan en un panel visible para todo el mundo.
