--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h3 class="regular-font-size text-uppercase mb-3">El evento empieza en</h3>
             <div id="date-countdown" class="mb-4"></div>
             <p>
-                Un Open Space es una desconferencia:
+                Un Open Space es una <a href="https://es.wikipedia.org/wiki/Desconferencia" target="_blank">desconferencia</a>:
                 no existe un programa de charlas predefinido, sino que los asistentes
                 propondrán los temas a tratar <i>in situ</i>.
                 Cualquier tema propuesto es válido, siempre dentro de la propuesta global de
