Highlight important snippets from description

--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
                 no existe un programa de charlas predefinido, sino que los asistentes
                 propondrán los temas a tratar <i>in situ</i>.
                 Cualquier tema propuesto es válido, siempre dentro de la propuesta global de
-                conversar acerca del ejercicio de la profesión.
+                <strong>conversar acerca del ejercicio de la profesión</strong>.
             </p>
             <p>
                 Los temas seleccionados se colocan en un panel visible para todo el mundo.
-                Habrá varios tracks en paralelo y la gente podrá asistir a las sesiones que le apetezca.
+                Habrá varios <strong>tracks en paralelo</strong> y la gente podrá asistir a las sesiones que le apetezca.
                 Lee más acerca del formato <a class="smooth-scroll" href="#formato">aquí</a>.
             </p>
             <p class="mb-5">
                 ¿Eres nuevo en un Open Space? ¡No te preocupes!
                 Habrá facilitadores que te ayudarán a sacar el máximo provecho.
-                Lo único que necesitas son ganas de compartir, aprender e interactuar con otras personas.
+                Lo único que necesitas son ganas de <strong>compartir, aprender e interactuar con otros profesionales</strong>.
             </p>
             <p>
               <a
