--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
           <div class="col-9 col-sm-9 col-md-10 col-lg-10">
             <div class="text-left p-6 item mb-5">
                 <h2 class="text-uppercase">Principios</h2>
-                <ul>
+                <ol>
                     <li>Cualquiera de los presentes es la persona adecuada.</li>
                     <li>Cualquier cosa que suceda es la única que podría haber sucedido.</li>
                     <li>El momento en que empiezan las sesiones es el momento adecuado.</li>
                     <li>Cuando se acaba la sesión, se acaba.</li>
-                </ul>
+                </ol>
             </div>
           </div>
         </div>
@@ -297,7 +297,9 @@
           <div class="col-9 col-sm-9 col-md-10 col-lg-10">
             <div class="text-left p-6 item">
                 <h2 class="text-uppercase">Ley de los dos pies</h2>
-                <blockquote class="ml-4">Si en algún momento sientes que no estás aprendiendo o contribuyendo en nada, usa tus pies.</blockquote>
+                <blockquote class="ml-4">
+                    Si en algún momento sientes que no estás aprendiendo o contribuyendo en nada, usa tus pies.
+                </blockquote>
             </div>
           </div>
         </div>
