Improve explanation of 2-feet rule

--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
             <div class="text-left p-6 item">
                 <h2 class="text-uppercase">Ley de los dos pies</h2>
                 <blockquote class="ml-4">
-                    Si en algún momento sientes que no estás aprendiendo o contribuyendo en nada, usa tus pies.
+                    Si en algún momento sientes que no estás aprendiendo o contribuyendo en 
+                    una sesión, usa tus pies para explorar otras que ocurren en paralelo.
                 </blockquote>
             </div>
           </div>
