Added code of conduct

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             <p class="mb-5">
                 ¿Eres nuevo en un Open Space? ¡No te preocupes!
                 Habrá facilitadores que te ayudarán a sacar el máximo provecho.
-                Lo único que necesitas son ganas de <strong>compartir, aprender e interactuar con otros profesionales</strong>.
+                Lo único que necesitas son ganas de <strong>compartir, aprender e interactuar con otros profesionales</strong>,
+                así como respetar <a href="coc.html">el código de conducta</a>.
             </p>
             <p>
               <a
@@ -361,7 +362,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-2">
           <div class="col-1 col-sm-1 col-md-1 col-lg-1">
           </div>
           <div class="col-2 col-sm-2 col-md-1 col-lg-1">
@@ -377,6 +378,13 @@
                     una sesión, usa tus pies para explorar otras que ocurren en paralelo.
                 </blockquote>
             </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-12">
+            <p class="text-center">
+                <a href="coc.html">Código de conducta</a>
+            </p>
           </div>
         </div>
         <div class="row">
