Add VLex as sponsor

--- a/index.html
+++ b/index.html
@@ -272,24 +272,31 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-6 col-lg-3 p-1">
+          <div class="col-lg-4 p-1">
             <p class="text-center mb-4">
                 <a href="https://areacentral.es/" target="_blank"><img src="images/logo_ac.png" class="sponsor"></a>
             </p>
           </div>
-          <div class="col-6 col-lg-3 p-1">
+          <div class="col-lg-4 p-1">
             <p class="text-center mb-4">
                 <a href="https://www.bermorabogados.com/" target="_blank"><img src="images/logo_bermor.png" class="sponsor fade"></a>
             </p>
           </div>
-          <div class="col-6 col-lg-3 p-1">
+          <div class="col-lg-4 p-1">
             <p class="text-center mb-4">
                 <a href="https://www.nolegaltech.com" target="_blank"><img src="images/logo_nlt.png" class="sponsor"></a>
             </p>
           </div>
-          <div class="col-6 col-lg-3 p-1">
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-6 p-1">
             <p class="text-center mb-4">
                 <a href="https://eventosjuridicos.es" target="_blank"><img src="images/logo_ej.png" class="sponsor"></a>
+            </p>
+          </div>
+          <div class="col-lg-6 p-1">
+            <p class="text-center mb-4">
+                <a href="https://vlex.com/" target="_blank"><img src="images/logo_vlex.png" class="sponsor"></a>
             </p>
           </div>
         </div>
