--- a/index.html
+++ b/index.html
@@ -413,6 +413,31 @@
             </div>
           </div>
         </div>
+        <div class="row" style="margin-top: 40px;">
+          <div class="col-1 col-sm-1 col-md-1 col-lg-1">
+          </div>
+          <div class="col-2 col-sm-2 col-md-1 col-lg-1">
+            <div class="text-right p-6 item">
+            </div>
+          </div>
+          <div class="col-9 col-sm-9 col-md-10 col-lg-10">
+            <div class="text-left p-6 item mb-5">
+                <h2 class="text-uppercase" style="margin-bottom: 30px">Agenda</h2>
+                <p> <strong>09:00</strong> - Llegada asistentes </p>
+                <p> <strong>10:00</strong> - Dinámica de grupo</p>
+                <p> <strong>10:30</strong> - Propuesta de charlas y votación</p>
+                <p> <strong>11:30</strong> - Presentación del panel</p>
+                <p> <strong>12:00</strong> - 1ª sesión (50 min + 10 min cambio)</p>
+                <p> <strong>13:00</strong> - 2ª sesión (50 min + 10 min cambio)</p>
+                <p> <strong>14:00</strong> - Pizzas</p>
+                <p> <strong>15:00</strong> - 3ª sesión (50 min + 10 min cambio)</p>
+                <p> <strong>16:00</strong> - 4ª sesión (50 min + 10 min cambio)</p>
+                <p> <strong>17:00</strong> - 5ª sesión (50 min + 10 min cambio)</p>
+                <p> <strong>18:30</strong> - Retrospectiva</p>
+                <p> <strong>19:00</strong> - Fin.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
