--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   </head>
   <body>
+
   
   <div class="site-wrap">
 
@@ -57,6 +58,30 @@
       </div>
     </div>
       
+    <div class="site-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-7">
+            <p>
+                53 asistentes. 27 charlas propuestas, 15 temas seleccionados.<br/>
+                Si tuviéramos que resumir esta primera edición del Legal Open Space, sólo se nos ocurre una palabra: <strong>BRUTAL</strong>.
+            </p>
+            <p>
+                Gracias a todos los patrocinadores por hacerlo posible, y a todos los que participaron
+                por la confianza de venir hasta Santiago de Compostela, a esta desconferencia.
+            </p>
+            <p>
+                Podéis leer las crónicas de <a href="https://xn--mariamario-19a.es/eventos/legal-open-space-santiago-de-compostela/" target="_blank">María Mariño</a> y <a href="https://www.linkedin.com/pulse/retrospectiva-del-legal-open-space-ignacio-nacho-escobar-quintana/" target="_blank">Nacho Quintana</a>, o buscarnos bajo el
+                hashtag <strong>#legalopen</strong> o <strong>#legalopenspace</strong> en las redes.
+            </p>
+            <p>
+                La segunda edición ya se está cocinando, nos vemos en unos meses.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div
         class="site-blocks-cover overlay"
         style="background-image: url(images/IMG_4103.JPG);"
@@ -69,12 +94,6 @@
             <h1 class="mb-4">El evento<br/>sin power points</h1>
             <p class="mb-5">1 de Febrero de 2020 &bullet; Santiago de Compostela</p>
             <p>
-              <a
-                target="_blank"
-                href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663"
-                class="btn btn-primary px-4 py-3 text-uppercase big-font-size">
-                  Compra tu entrada
-              </a>
             </p>
           </div>
         </div>
@@ -128,12 +147,6 @@
                 así como respetar <a href="coc.html">el código de conducta</a>.
             </p>
             <p>
-              <a
-                target="_blank"
-                href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663"
-                class="btn btn-primary px-4 py-3 text-uppercase big-font-size">
-                  Compra tu entrada
-              </a>
             </p>
           </div>
         </div>
@@ -403,12 +416,6 @@
           <div class="mt-5 col-md-10 col-lg-10 mx-auto">
             <div class="text-center p-6 item">
               <p>
-                <a
-                  target="_blank"
-                  href="https://www.eventbrite.es/e/entradas-legal-open-space-76091813663"
-                  class="btn btn-primary px-4 py-3 text-uppercase big-font-size">
-                    Compra tu entrada
-                </a>
               </p>
             </div>
           </div>
