--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div
         class="site-blocks-cover overlay"
-        style="background-image: url(images/IMG_4103.JPG);"
+        style="background-image: url(images/mare_fito.jpg);"
         data-aos="fade"
         data-stellar-background-ratio="0.5">
 
@@ -97,21 +97,6 @@
             </p>
           </div>
         </div>
-      </div>
-      <div style="position: absolute; bottom: 20px; left: 20px">
-          <p class="small-font-size">
-            Foto de
-            <strong>
-                <a href="https://twitter.com/dvilchez" target="_blank">
-                    David Vílchez
-                </a>
-            </strong> publicada en el álbum
-            <strong>
-                <a href="https://goo.gl/photos/Z6NFyCcWJK6RwyDz7" target="_blank">
-                    AOS2k16
-                </a>
-            </strong>
-          </p>
       </div>
     </div>  
 
@@ -154,39 +139,9 @@
     </div>
 
     <div class="site-block-half d-flex images">
-      <div class="image bg-image" style="background-image: url('images/IMG_4207.JPG');">
-        <div class="pic-info">
-            <p class="small-font-size px-3">
-              Foto de
-              <strong>
-                  <a href="https://twitter.com/dvilchez" target="_blank">
-                      David Vílchez
-                  </a>
-              </strong> publicada en el álbum
-              <strong>
-                  <a href="https://goo.gl/photos/Z6NFyCcWJK6RwyDz7" target="_blank">
-                      AOS2k16
-                  </a>
-              </strong>
-            </p>
-        </div>
+      <div class="image bg-image" style="background-image: url('images/voluntarios.jpg');">
       </div>
-      <div class="image bg-image" style="background-image: url('images/20170624_160923.jpg');">
-        <div class="pic-info">
-            <p class="small-font-size px-3">
-              Foto de
-              <strong>
-                  <a href="https://twitter.com/walletthomas" target="_blank">
-                      Thomas Wallet
-                  </a>
-              </strong> publicada en el álbum
-              <strong>
-                  <a href="https://goo.gl/photos/CNTzR58zra1MV5hN9" target="_blank">
-                      AOS2017
-                  </a>
-              </strong>
-            </p>
-        </div>
+      <div class="image bg-image" style="background-image: url('images/kuartillo_fito.jpg');">
       </div>
     </div>
 
