--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             <p>
                 La segunda edición ya se está cocinando, nos vemos en unos meses.
             </p>
+            <p>
+                <img src="images/Conejitosalt.png" style="width: 100%">
+            </p>
           </div>
         </div>
       </div>
