Text in signpost

--- a/new/index.html
+++ b/new/index.html
@@ -134,6 +134,27 @@
                     h -2
                     z
             " />
+            <text x="4.4" y="6" font-size="0.9" font-family="Verdana" transform="rotate(-0.5,0,0)">
+                ¡¡Legal Open Space Pandemic Edition!!
+            </text>
+            <text x="4" y="9.5" font-size="0.7" font-family="Verdana">
+                Vuelve el evento más molón del año, a petición popular
+            </text>
+            <text x="3.1" y="10.5" font-size="0.7" font-family="Verdana">
+                en septiembre 2020. La temática girará en torno al ejercicio
+            </text>
+            <text x="3.1" y="11.5" font-size="0.7" font-family="Verdana">
+                profesional de la abogacía y retos de futuro, y como siempre
+            </text>
+            <text x="3.1" y="12.5" font-size="0.7" font-family="Verdana">
+                cualquier profesional es más que bienvenido.
+            </text>
+            <text x="5" y="15" font-size="0.7" font-family="Verdana">
+                Si quieres, puedes escribirnos con tus sugerencias,
+            </text>
+            <text x="5" y="16" font-size="0.7" font-family="Verdana">
+                dudas o preguntas a hola@nolegaltech.com
+            </text>
         </svg>
     </body>
 </html>
