New website version

--- a/new/index.html
+++ b/new/index.html
@@ -11,150 +11,19 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <svg class="brown" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
-            <path d="
-                M 11 3 
-                    l -0.5 -2
-                    h 2.5
-                    v 1
-                    l 0.5 -1.5
-                    h 2
-                    v 17
-                    l 1 8
-                    h -7
-                    z
-                M 27 2
-                    l -0.5 3
-                    l 1 0
-                    l 1 -3
-                    z
-                M 26.5 5.5
-                    l 0 0.5
-                    l 1 0
-                    l 0 -0.5
-                    z
-                M 26 7.5
-                    l 0 3.5
-                    l 1.5 0
-                    l 0 -3.5
-                    z
-                M 26 12
-                    l 0.25 3
-                    l 1.5 -0.25
-                    l -0.25 -2.75
-                    z
-                M 26.5 15.5
-                    l 0.5 3.5
-                    l 1.5 -0.5
-                    l -0.5 -3.25
-                    z
-                M 8 3
-                    l 0.5 1
-                    h 1
-                    l 0.5 -0.5
-                    v -0.3
-                    z
-            " />
-        </svg>
-        <svg class="black" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
-            <path d="
-                M 15.5 0.5 
-                    v 17
-                    l 1 8
-                    h 2
-                    l -2 -20
-                    l 0.5 -5
-                    z
-                M 13 1
-                    v 1
-                    l 0.333 -1
-                    z
-                M 25 5
-                    l 1 0.5
-                    h 1.5
-                    l -1.5 -0.5
-                    z
-                M 26.5 6
-                    l -2.5 1
-                    l 2 0.5
-                    h 1.5
-                    l -2.5 -0.5
-                    l 2.5 -1
-                    z
-                M 26 11
-                    l -1 0.5
-                    l 1 0.5
-                    h 1.5
-                    l -1 -0.5
-                    l 1 -0.5
-                    z
-                M 24 14.5
-                    l 2.5 1
-                    l 1.5 -0.25
-                    z
-            " />
-        </svg>
-        <svg class="white" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
-            <path d="
-                M 2 3 
-                    h 6 
-                    l 0.5 1
-                    h 1
-                    l 0.5 -0.5
-                    v -1
-                    l 8 1
-                    l 9 -1.5
-                    l -0.5 3
-                    h -1.5
-                    l 1.5 0.5
-                    v 0.5
-                    l -2.5 1
-                    l 2 0.5
-                    v 3.5
-                    l -1 0.5
-                    l 1 0.5
-                    l 0.25 3
-                    l -2.25 -0.5
-                    l 2.5 1
-                    l 0.5 3.5
-                    l -8 -1
-                    h -9
-                    l -9.5 1
-                    l 0.5 -4
-                    l 2.5 -0.5
-                    l -2 -0.5
-                    v -4
-                    l 0.5 -0.5
-                    l -1 -0.5
-                    l 0.5 -1
-                    l 2 -0.5
-                    l -1.5 -0.5
-                    v -2
-                    l 1.5 -1
-                    h -2
-                    z
-            " />
-            <text x="4.4" y="6" font-size="0.9" font-family="Verdana" transform="rotate(-0.5,0,0)">
-                ¡¡Legal Open Space Pandemic Edition!!
-            </text>
-            <text x="4" y="9.5" font-size="0.7" font-family="Verdana">
+        <img src="images/nos_vemos_en_septiembre.png" />
+        <article>
+            <h1>¡¡Legal Open Space Pandemic Edition!!</h1>
+            <p>
                 Vuelve el evento más molón del año, a petición popular
-            </text>
-            <text x="3.1" y="10.5" font-size="0.7" font-family="Verdana">
                 en septiembre 2020. La temática girará en torno al ejercicio
-            </text>
-            <text x="3.1" y="11.5" font-size="0.7" font-family="Verdana">
                 profesional de la abogacía y retos de futuro, y como siempre
-            </text>
-            <text x="3.1" y="12.5" font-size="0.7" font-family="Verdana">
                 cualquier profesional es más que bienvenido.
-            </text>
-            <text x="5" y="15" font-size="0.7" font-family="Verdana">
+            </p>
+            <p>
                 Si quieres, puedes escribirnos con tus sugerencias,
-            </text>
-            <text x="5" y="16" font-size="0.7" font-family="Verdana">
-                dudas o preguntas a hola@nolegaltech.com
-            </text>
-        </svg>
+                dudas o preguntas a <a href="mailto:hola@nolegaltech.com">hola@nolegaltech.com</a>
+            </p>
+        </article>
     </body>
 </html>
