--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Legal Open Space - Pandemic Edition</title>
+    <title>Legal Open Space - Murcia Edition</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -47,10 +47,10 @@
           <div class="py-1">
             <div class="row align-items-center">
               <div class="col-5">
-                <h2 class="col-12 col-sm-12 col-md-8 col-lg-12 mb-4 site-logo"><a href="index.html">Legal Open Space</a></h2>
+                <h2 class="col-12 col-sm-12 col-md-8 col-lg-12 mb-2 site-logo"><a href="index.html">Legal Open Space</a></h2>
               </div>
               <div class="col-7 text-right">
-                <h2 class="mb-4 site-logo"><a href="index.html">Pandemic Edition</a></h2>
+                <h2 class="mb-2 site-logo"><a href="index.html">Murcia Edition</a></h2>
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@
         <div class="row justify-content-center">
           <div class="col-10 col-lg-7">
             <p>
-                Volvemos a la carga con una nueva edición del Legal Open Space, esta vez en formato online.
+                Volvemos a la carga con una nueva edición del Legal Open Space, esta vez en Murcia.
             </p>
             <p>
                 Cuatro horas, tres espacios, un único objetivo: <strong>discutir y compartir ideas sobre los retos que enfrenta la abogacía</strong>.
@@ -83,11 +83,11 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-10 text-center" data-aos="fade">
             <h1 class="mb-4">El evento<br/>sin power points</h1>
-            <p class="mb-5">Viernes 11 de Septiembre de 2020 &bullet; Online</p>
+            <p class="mb-5">Sábado 21 de Mayo de 2022 &bullet; Murcia</p>
             <p>
               <a
                 target="_blank"
-                href="https://www.eventbrite.es/e/entradas-legal-open-space-pandemic-edition-119811101229?aff=ebdssbonlinesearch"
+                href="https://www.eventbrite.es/e/entradas-legal-open-space-murcia-edition-295348945647"
                 class="btn btn-primary px-4 py-3 text-uppercase big-font-size">
                   Compra tu entrada
               </a>
@@ -180,7 +180,7 @@
         <div class="row pt-1 mt-1 text-center">
           <div class="col-md-12">
             <p class="small-font-size">
-               Si tienes dudas o preguntas, puedes escribirnos a <a href="mailto:hola@nolegaltech.com">hola@nolegaltech.com</a>
+              Si tienes dudas o preguntas, puedes escribirnos a <a href="mailto:hola@legalopenspace.com">hola@legalopenspace.com</a>
             </p>
             <p> - </p>
             <p>
